add more categories for genres to display all claims